[gd_scene load_steps=4 format=3 uid="uid://dndwvdj1mvb75"]

[ext_resource type="Script" uid="uid://p8whomltc25m" path="res://game/ui/game_ui.gd" id="1_2yi3t"]
[ext_resource type="PackedScene" uid="uid://fc1w8c45lf42" path="res://game/ui/orb_container_panel/orb_container_panel.tscn" id="2_6fwhv"]
[ext_resource type="PackedScene" uid="uid://brhyiypjvxdpk" path="res://game/ui/ability_bar/button/ability_button.tscn" id="3_ue7m6"]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_2yi3t")

[node name="OrbContainerPanel" parent="." instance=ExtResource("2_6fwhv")]

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -73.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "Level: 1"
horizontal_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="HeadOrbLabel" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="ChestOrbLabel" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="HandsOrbLabel" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="LegsOrbLabel" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 25

[node name="AbilityButton" parent="MarginContainer2" instance=ExtResource("3_ue7m6")]
layout_mode = 2
